# my-vit-burn

./: Cargo.toml  bacon.toml
chore-vit/: main.py  pyproject.toml  vit_train.py
doc/: memo.md
src/: cifar10.rs  cifar10_batcher.rs  cifar10_item.rs  config.rs  lib.rs  main.rs  training.rs  vit.rs  vit_lucid.rs
