[package]
name = "my-vit-burn"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
burn = { version = "0.19.1", features = ["wgpu", "metal", "train", "vision", "ndarray"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24" # 画像デコード用